--- a/src/scss/components/_about.scss
+++ b/src/scss/components/_about.scss
@@ -1,7 +1,7 @@
 .about {
 	picture {
 		width: fit-content;
-		background-image: url('./../../img/holder.webp'); /* путь к изображению-заглушке */
+		background-image: url('/IndoTravel-landing/img/holder.webp'); /* путь к изображению-заглушке */
     background-size: cover;
     background-position: center;
 	}
