--- a/src/scss/components/_why.scss
+++ b/src/scss/components/_why.scss
@@ -69,27 +69,27 @@
 	}
 
 	&:nth-child(1):before {
-		background-image: url("./../../img/why/compas.svg");
+		background-image: url("/IndoTravel-landing/img/why/compas.svg");
 	}
 
 	&:nth-child(2):before {
-		background-image: url("./../../img/why/suitcase.svg");
+		background-image: url("/IndoTravel-landing/img/why/suitcase.svg");
 	}
 
 	&:nth-child(3):before {
-		background-image: url("./../../img/why/shield.svg");
+		background-image: url("/IndoTravel-landing/img/why/shield.svg");
 	}
 
 	&:nth-child(4):before {
-		background-image: url("./../../img/why/meds.svg");
+		background-image: url("/IndoTravel-landing/img/why/meds.svg");
 	}
 
 	&:nth-child(5):before {
-		background-image: url("./../../img/why/pacifier.svg");
+		background-image: url("/IndoTravel-landing/img/why/pacifier.svg");
 	}
 
 	&:nth-child(6):before {
-		background-image: url("./../../img/why/hot-food.svg");
+		background-image: url("/IndoTravel-landing/img/why/hot-food.svg");
 	}
 
 	&>:not(:last-child) {
