--- a/docs/css/index.css
+++ b/docs/css/index.css
@@ -4,35 +4,35 @@
   font-family: Merriweather;
   font-weight: 400;
   font-display: swap;
-  src: url("/IndoTravel-landing/fonts/Merriweather-400.woff2") format("woff2"), url("./..//IndoTravel-landing/fonts/Merriweather-400.woff") format("woff"), url(".//IndoTravel-landing/fonts/Merriweather-400.ttf") format("truetype"), url(".//IndoTravel-landing/fonts/Merriweather-400.eot") format("embedded-opentype");
+  src: url("../fonts/Merriweather-400.woff2") format("woff2"), url("./../../fonts/Merriweather-400.woff") format("woff"), url("./../fonts/Merriweather-400.ttf") format("truetype"), url("./../fonts/Merriweather-400.eot") format("embedded-opentype");
 }
 
 @font-face {
   font-family: Nunito;
   font-weight: 200;
   font-display: swap;
-  src: url("/IndoTravel-landing/fonts/Nunito-200.woff2") format("woff2"), url("./..//IndoTravel-landing/fonts/Nunito-200.woff") format("woff"), url(".//IndoTravel-landing/fonts/Nunito-200.ttf") format("truetype"), url(".//IndoTravel-landing/fonts/Nunito-200.eot") format("embedded-opentype");
+  src: url("../fonts/Nunito-200.woff2") format("woff2"), url("./../../fonts/Nunito-200.woff") format("woff"), url("./../fonts/Nunito-200.ttf") format("truetype"), url("./../fonts/Nunito-200.eot") format("embedded-opentype");
 }
 
 @font-face {
   font-family: Nunito;
   font-weight: 300;
   font-display: swap;
-  src: url("/IndoTravel-landing/fonts/Nunito-300.woff2") format("woff2"), url("./..//IndoTravel-landing/fonts/Nunito-300.woff") format("woff"), url(".//IndoTravel-landing/fonts/Nunito-300.ttf") format("truetype"), url(".//IndoTravel-landing/fonts/Nunito-300.eot") format("embedded-opentype");
+  src: url("../fonts/Nunito-300.woff2") format("woff2"), url("./../../fonts/Nunito-300.woff") format("woff"), url("./../fonts/Nunito-300.ttf") format("truetype"), url("./../fonts/Nunito-300.eot") format("embedded-opentype");
 }
 
 @font-face {
   font-family: Nunito;
   font-weight: 600;
   font-display: swap;
-  src: url("/IndoTravel-landing/fonts/Nunito-600.woff2") format("woff2"), url("./..//IndoTravel-landing/fonts/Nunito-600.woff") format("woff"), url(".//IndoTravel-landing/fonts/Nunito-600.ttf") format("truetype"), url(".//IndoTravel-landing/fonts/Nunito-600.eot") format("embedded-opentype");
+  src: url("../fonts/Nunito-600.woff2") format("woff2"), url("./../../fonts/Nunito-600.woff") format("woff"), url("./../fonts/Nunito-600.ttf") format("truetype"), url("./../fonts/Nunito-600.eot") format("embedded-opentype");
 }
 
 @font-face {
   font-family: Nunito;
   font-weight: 700;
   font-display: swap;
-  src: url("/IndoTravel-landing/fonts/Nunito-700.woff2") format("woff2"), url("./..//IndoTravel-landing/fonts/Nunito-700.woff") format("woff"), url(".//IndoTravel-landing/fonts/Nunito-700.ttf") format("truetype"), url(".//IndoTravel-landing/fonts/Nunito-700.eot") format("embedded-opentype");
+  src: url("../fonts/Nunito-700.woff2") format("woff2"), url("./../../fonts/Nunito-700.woff") format("woff"), url("./../fonts/Nunito-700.ttf") format("truetype"), url("./../fonts/Nunito-700.eot") format("embedded-opentype");
 }
 
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
@@ -560,8 +560,8 @@ iframe {
 }
 
 .header {
-  background-image: -webkit-image-set(url("IndoTravel-landing/img/header/header-banner.avif") 1x type("image/avif"), url("IndoTravel-landing/img/header/header-banner.webp") 1x type("image/webp"), url("IndoTravel-landing/img/header/header-banner.jpg"));
-  background-image: image-set(url("IndoTravel-landing/img/header/header-banner.avif") 1x type("image/avif"), url("IndoTravel-landing/img/header/header-banner.webp") 1x type("image/webp"), url("IndoTravel-landing/img/header/header-banner.jpg"));
+  background-image: -webkit-image-set(url("./../../img/header/header-banner.avif") 1x type("image/avif"), url("./../../img/header/header-banner.webp") 1x type("image/webp"), url("./../../img/header/header-banner.jpg"));
+  background-image: image-set(url("./../../img/header/header-banner.avif") 1x type("image/avif"), url("./../../img/header/header-banner.webp") 1x type("image/webp"), url("./../../img/header/header-banner.jpg"));
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -686,7 +686,7 @@ iframe {
 .about picture {
   width: -moz-fit-content;
   width: fit-content;
-  background-image: url("IndoTravel-landing/img/holder.webp");
+  background-image: url("./../../img/holder.webp");
   /* путь к изображению-заглушке */
   background-size: cover;
   background-position: center;
@@ -908,8 +908,8 @@ iframe {
 }
 
 .calculator {
-  background-image: -webkit-image-set(url("IndoTravel-landing/img/calculator-bg.avif") 1x type("image/avif"), url("IndoTravel-landing/img/calculator-bg.webp") 1x type("image/webp"), url("IndoTravel-landing/img/calculator-bg.jpg") 1x);
-  background-image: image-set(url("IndoTravel-landing/img/calculator-bg.avif") 1x type("image/avif"), url("IndoTravel-landing/img/calculator-bg.webp") 1x type("image/webp"), url("IndoTravel-landing/img/calculator-bg.jpg") 1x);
+  background-image: -webkit-image-set(url("./../../img/calculator-bg.avif") 1x type("image/avif"), url("./../../img/calculator-bg.webp") 1x type("image/webp"), url("./../../img/calculator-bg.jpg") 1x);
+  background-image: image-set(url("./../../img/calculator-bg.avif") 1x type("image/avif"), url("./../../img/calculator-bg.webp") 1x type("image/webp"), url("./../../img/calculator-bg.jpg") 1x);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -1186,7 +1186,7 @@ iframe {
 }
 
 .popup__options-item--checked::before {
-  background-image: url("IndoTravel-landing/img/icons/mark-button.svg") !important;
+  background-image: url("./../../img/icons/mark-button.svg") !important;
   background-repeat: no-repeat !important;
   background-size: cover !important;
   background-position: center !important;
@@ -1222,27 +1222,27 @@ iframe {
 }
 
 .why__card:nth-child(1):before {
-  background-image: url("IndoTravel-landing/img/why/compas.svg");
+  background-image: url("./../../img/why/compas.svg");
 }
 
 .why__card:nth-child(2):before {
-  background-image: url("IndoTravel-landing/img/why/suitcase.svg");
+  background-image: url("./../../img/why/suitcase.svg");
 }
 
 .why__card:nth-child(3):before {
-  background-image: url("IndoTravel-landing/img/why/shield.svg");
+  background-image: url("./../../img/why/shield.svg");
 }
 
 .why__card:nth-child(4):before {
-  background-image: url("IndoTravel-landing/img/why/meds.svg");
+  background-image: url("./../../img/why/meds.svg");
 }
 
 .why__card:nth-child(5):before {
-  background-image: url("IndoTravel-landing/img/why/pacifier.svg");
+  background-image: url("./../../img/why/pacifier.svg");
 }
 
 .why__card:nth-child(6):before {
-  background-image: url("IndoTravel-landing/img/why/hot-food.svg");
+  background-image: url("./../../img/why/hot-food.svg");
 }
 
 .why__card > :not(:last-child) {
@@ -1540,8 +1540,8 @@ iframe {
 .footer {
   padding: 80px 0;
   color: #fff;
-  background-image: -webkit-image-set(url("IndoTravel-landing/img/footer/footer-bg.avif") 1x type("image/avif"), url("IndoTravel-landing/img/footer/footer-bg.webp") 1x type("image/webp"), url("IndoTravel-landing/img/footer/footer-bg.jpg"));
-  background-image: image-set(url("IndoTravel-landing/img/footer/footer-bg.avif") 1x type("image/avif"), url("IndoTravel-landing/img/footer/footer-bg.webp") 1x type("image/webp"), url("IndoTravel-landing/img/footer/footer-bg.jpg"));
+  background-image: -webkit-image-set(url("./../../img/footer/footer-bg.avif") 1x type("image/avif"), url("./../../img/footer/footer-bg.webp") 1x type("image/webp"), url("./../../img/footer/footer-bg.jpg"));
+  background-image: image-set(url("./../../img/footer/footer-bg.avif") 1x type("image/avif"), url("./../../img/footer/footer-bg.webp") 1x type("image/webp"), url("./../../img/footer/footer-bg.jpg"));
   background-size: cover;
   background-repeat: no-repeat;
 }
@@ -2015,8 +2015,8 @@ iframe {
   }
 
   .header {
-    background-image: -webkit-image-set(url("IndoTravel-landing/img/header/header-banner-1024.avif") 1x type("image/avif"), url("IndoTravel-landing/img/header/header-banner-1024.webp") 1x type("image/webp"), url("IndoTravel-landing/img/header/header-banner-1024.jpg"));
-    background-image: image-set(url("IndoTravel-landing/img/header/header-banner-1024.avif") 1x type("image/avif"), url("IndoTravel-landing/img/header/header-banner-1024.webp") 1x type("image/webp"), url("IndoTravel-landing/img/header/header-banner-1024.jpg"));
+    background-image: -webkit-image-set(url("./../../img/header/header-banner-1024.avif") 1x type("image/avif"), url("./../../img/header/header-banner-1024.webp") 1x type("image/webp"), url("./../../img/header/header-banner-1024.jpg"));
+    background-image: image-set(url("./../../img/header/header-banner-1024.avif") 1x type("image/avif"), url("./../../img/header/header-banner-1024.webp") 1x type("image/webp"), url("./../../img/header/header-banner-1024.jpg"));
   }
 
   .about {
@@ -2088,8 +2088,8 @@ iframe {
   }
 
   .calculator {
-    background-image: -webkit-image-set(url("IndoTravel-landing/img/calculator-bg-1024.avif") 1x type("image/avif"), url("IndoTravel-landing/img/calculator-bg-1024.webp") 1x type("image/webp"), url("IndoTravel-landing/img/calculator-bg-1024.jpg") 1x);
-    background-image: image-set(url("IndoTravel-landing/img/calculator-bg-1024.avif") 1x type("image/avif"), url("IndoTravel-landing/img/calculator-bg-1024.webp") 1x type("image/webp"), url("IndoTravel-landing/img/calculator-bg-1024.jpg") 1x);
+    background-image: -webkit-image-set(url("./../../img/calculator-bg-1024.avif") 1x type("image/avif"), url("./../../img/calculator-bg-1024.webp") 1x type("image/webp"), url("./../../img/calculator-bg-1024.jpg") 1x);
+    background-image: image-set(url("./../../img/calculator-bg-1024.avif") 1x type("image/avif"), url("./../../img/calculator-bg-1024.webp") 1x type("image/webp"), url("./../../img/calculator-bg-1024.jpg") 1x);
   }
 
   .calculator {
@@ -2232,8 +2232,8 @@ iframe {
   }
 
   .footer {
-    background-image: -webkit-image-set(url("IndoTravel-landing/img/footer/footer-bg-1024.avif") 1x type("image/avif"), url("IndoTravel-landing/img/footer/footer-bg-1024.webp") 1x type("image/webp"), url("IndoTravel-landing/img/footer/footer-bg-1024.jpg") 1x);
-    background-image: image-set(url("IndoTravel-landing/img/footer/footer-bg-1024.avif") 1x type("image/avif"), url("IndoTravel-landing/img/footer/footer-bg-1024.webp") 1x type("image/webp"), url("IndoTravel-landing/img/footer/footer-bg-1024.jpg") 1x);
+    background-image: -webkit-image-set(url("./../../img/footer/footer-bg-1024.avif") 1x type("image/avif"), url("./../../img/footer/footer-bg-1024.webp") 1x type("image/webp"), url("./../../img/footer/footer-bg-1024.jpg") 1x);
+    background-image: image-set(url("./../../img/footer/footer-bg-1024.avif") 1x type("image/avif"), url("./../../img/footer/footer-bg-1024.webp") 1x type("image/webp"), url("./../../img/footer/footer-bg-1024.jpg") 1x);
   }
 
   .footer {
@@ -2295,8 +2295,8 @@ iframe {
   }
 
   .header {
-    background-image: -webkit-image-set(url("IndoTravel-landing/img/header/header-banner-768.avif") 1x type("image/avif"), url("IndoTravel-landing/img/header/header-banner-768.webp") 1x type("image/webp"), url("IndoTravel-landing/img/header/header-banner-768.jpg"));
-    background-image: image-set(url("IndoTravel-landing/img/header/header-banner-768.avif") 1x type("image/avif"), url("IndoTravel-landing/img/header/header-banner-768.webp") 1x type("image/webp"), url("IndoTravel-landing/img/header/header-banner-768.jpg"));
+    background-image: -webkit-image-set(url("./../../img/header/header-banner-768.avif") 1x type("image/avif"), url("./../../img/header/header-banner-768.webp") 1x type("image/webp"), url("./../../img/header/header-banner-768.jpg"));
+    background-image: image-set(url("./../../img/header/header-banner-768.avif") 1x type("image/avif"), url("./../../img/header/header-banner-768.webp") 1x type("image/webp"), url("./../../img/header/header-banner-768.jpg"));
   }
 
   .about {
@@ -2376,8 +2376,8 @@ iframe {
   }
 
   .calculator {
-    background-image: -webkit-image-set(url("IndoTravel-landing/img/calculator-bg-768.avif") 1x type("image/avif"), url("IndoTravel-landing/img/calculator-bg-768.webp") 1x type("image/webp"), url("IndoTravel-landing/img/calculator-bg-768.jpg") 1x);
-    background-image: image-set(url("IndoTravel-landing/img/calculator-bg-768.avif") 1x type("image/avif"), url("IndoTravel-landing/img/calculator-bg-768.webp") 1x type("image/webp"), url("IndoTravel-landing/img/calculator-bg-768.jpg") 1x);
+    background-image: -webkit-image-set(url("./../../img/calculator-bg-768.avif") 1x type("image/avif"), url("./../../img/calculator-bg-768.webp") 1x type("image/webp"), url("./../../img/calculator-bg-768.jpg") 1x);
+    background-image: image-set(url("./../../img/calculator-bg-768.avif") 1x type("image/avif"), url("./../../img/calculator-bg-768.webp") 1x type("image/webp"), url("./../../img/calculator-bg-768.jpg") 1x);
   }
 
   .calculator {
@@ -2586,8 +2586,8 @@ iframe {
   }
 
   .footer {
-    background-image: -webkit-image-set(url("IndoTravel-landing/img/footer/footer-bg-768.avif") 1x type("image/avif"), url("IndoTravel-landing/img/footer/footer-bg-768.webp") 1x type("image/webp"), url("IndoTravel-landing/img/footer/footer-bg-768.jpg") 1x);
-    background-image: image-set(url("IndoTravel-landing/img/footer/footer-bg-768.avif") 1x type("image/avif"), url("IndoTravel-landing/img/footer/footer-bg-768.webp") 1x type("image/webp"), url("IndoTravel-landing/img/footer/footer-bg-768.jpg") 1x);
+    background-image: -webkit-image-set(url("./../../img/footer/footer-bg-768.avif") 1x type("image/avif"), url("./../../img/footer/footer-bg-768.webp") 1x type("image/webp"), url("./../../img/footer/footer-bg-768.jpg") 1x);
+    background-image: image-set(url("./../../img/footer/footer-bg-768.avif") 1x type("image/avif"), url("./../../img/footer/footer-bg-768.webp") 1x type("image/webp"), url("./../../img/footer/footer-bg-768.jpg") 1x);
   }
 
   .footer {
@@ -3115,18 +3115,18 @@ iframe {
 
 @media (width <= 450px) {
   .header {
-    background-image: -webkit-image-set(url("IndoTravel-landing/img/header/header-banner-320.avif") 1x type("image/avif"), url("IndoTravel-landing/img/header/header-banner-320.webp") 1x type("image/webp"), url("IndoTravel-landing/img/header/header-banner-320.jpg"));
-    background-image: image-set(url("IndoTravel-landing/img/header/header-banner-320.avif") 1x type("image/avif"), url("IndoTravel-landing/img/header/header-banner-320.webp") 1x type("image/webp"), url("IndoTravel-landing/img/header/header-banner-320.jpg"));
+    background-image: -webkit-image-set(url("./../../img/header/header-banner-320.avif") 1x type("image/avif"), url("./../../img/header/header-banner-320.webp") 1x type("image/webp"), url("./../../img/header/header-banner-320.jpg"));
+    background-image: image-set(url("./../../img/header/header-banner-320.avif") 1x type("image/avif"), url("./../../img/header/header-banner-320.webp") 1x type("image/webp"), url("./../../img/header/header-banner-320.jpg"));
   }
 
   .calculator {
-    background-image: -webkit-image-set(url("IndoTravel-landing/img/calculator-bg-320.avif") 1x type("image/avif"), url("IndoTravel-landing/img/calculator-bg-320.webp") 1x type("image/webp"), url("IndoTravel-landing/img/calculator-bg-320.jpg") 1x);
-    background-image: image-set(url("IndoTravel-landing/img/calculator-bg-320.avif") 1x type("image/avif"), url("IndoTravel-landing/img/calculator-bg-320.webp") 1x type("image/webp"), url("IndoTravel-landing/img/calculator-bg-320.jpg") 1x);
+    background-image: -webkit-image-set(url("./../../img/calculator-bg-320.avif") 1x type("image/avif"), url("./../../img/calculator-bg-320.webp") 1x type("image/webp"), url("./../../img/calculator-bg-320.jpg") 1x);
+    background-image: image-set(url("./../../img/calculator-bg-320.avif") 1x type("image/avif"), url("./../../img/calculator-bg-320.webp") 1x type("image/webp"), url("./../../img/calculator-bg-320.jpg") 1x);
   }
 
   .footer {
-    background-image: -webkit-image-set(url("IndoTravel-landing/img/footer/footer-bg-320.avif") 1x type("image/avif"), url("IndoTravel-landing/img/footer/footer-bg-320.webp") 1x type("image/webp"), url("IndoTravel-landing/img/footer/footer-bg-320.jpg") 1x);
-    background-image: image-set(url("IndoTravel-landing/img/footer/footer-bg-320.avif") 1x type("image/avif"), url("IndoTravel-landing/img/footer/footer-bg-320.webp") 1x type("image/webp"), url("IndoTravel-landing/img/footer/footer-bg-320.jpg") 1x);
+    background-image: -webkit-image-set(url("./../../img/footer/footer-bg-320.avif") 1x type("image/avif"), url("./../../img/footer/footer-bg-320.webp") 1x type("image/webp"), url("./../../img/footer/footer-bg-320.jpg") 1x);
+    background-image: image-set(url("./../../img/footer/footer-bg-320.avif") 1x type("image/avif"), url("./../../img/footer/footer-bg-320.webp") 1x type("image/webp"), url("./../../img/footer/footer-bg-320.jpg") 1x);
   }
 }
 
