--- a/src/scss/components/_travel.scss
+++ b/src/scss/components/_travel.scss
@@ -257,7 +257,7 @@
 .map {
 	width: 480px;
 	height: 410px;
-	// transform: translateY(-24px);
+	transform: translateY(-24px);
 
 	svg>* {
 		transition: fill 0.3s ease-in;
