--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -10,18 +10,20 @@
 
 	@media (width <=1200px) {
 		background-image: image-set(url('./../../img/footer/footer-bg-1024.avif') 1x type("image/avif"),
-			url('./../../img/footer/footer-bg-1024.webp') 1x type("image/webp"),
-			url('./../../img/footer/footer-bg-1024.jpg') 1x);
+				url('./../../img/footer/footer-bg-1024.webp') 1x type("image/webp"),
+				url('./../../img/footer/footer-bg-1024.jpg') 1x);
 	}
+
 	@media (width <=900px) {
 		background-image: image-set(url('./../../img/footer/footer-bg-768.avif') 1x type("image/avif"),
-			url('./../../img/footer/footer-bg-768.webp') 1x type("image/webp"),
-			url('./../../img/footer/footer-bg-768.jpg') 1x);
+				url('./../../img/footer/footer-bg-768.webp') 1x type("image/webp"),
+				url('./../../img/footer/footer-bg-768.jpg') 1x);
 	}
+
 	@media (width <=450px) {
 		background-image: image-set(url('./../../img/footer/footer-bg-320.avif') 1x type("image/avif"),
-			url('./../../img/footer/footer-bg-320.webp') 1x type("image/webp"),
-			url('./../../img/footer/footer-bg-320.jpg') 1x);
+				url('./../../img/footer/footer-bg-320.webp') 1x type("image/webp"),
+				url('./../../img/footer/footer-bg-320.jpg') 1x);
 	}
 
 	@media (width <=1200px) {
@@ -90,6 +92,8 @@
 
 	@media (width <=900px) {
 		transform: translateX(10px);
+		letter-spacing: -0.03rem;
+		margin-right: 8px;
 	}
 }
 
